--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uis",
-  "version": "1.0.0",
+  "name": "khan-ui",
+  "version": "1.0.1",
   "description": "React UI components",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,28 +8,45 @@
     "pretest": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "posttest": "npm run format",
-    "format": "prettier --log-level warn --write \"**/*.{ts,tsx,css,md}\"",
+    "lint": "biome lint .",
+    "lint:fix": "biome check --apply-unsafe ./src",
+    "release": "npm run lint:fix && changelogen --release && npm run build && cd dist && npm publish && git push --follow-tags",
+    "format": "biome format --write .",
     "clean": "rimraf ./dist",
-    "build:transpile": "sucrase ./src -d ./dist --transforms typescript,jsx",
+    "type-check": "tsc --noEmit",
     "build:types": "tsc --emitDeclarationOnly",
+    "build:transpile": "swc ./src -d ./dist --copy-files",
     "build:copy-package-json": "node scripts/build.js",
-    "build": "npm-run-all clean build:*",
-    "publish": "npm run build && npm publish dist"
+    "build": "npm-run-all type-check clean build:*",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Ivan Khanevich <help@iamkhan.tech>",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
+    "@storybook/addon-essentials": "7.6.4",
+    "@storybook/addon-interactions": "7.6.4",
+    "@storybook/addon-links": "7.6.4",
+    "@storybook/addon-onboarding": "1.0.10",
+    "@storybook/blocks": "7.6.4",
+    "@storybook/react": "7.6.4",
+    "@storybook/react-vite": "7.6.4",
+    "@storybook/test": "7.6.4",
+    "@swc/cli": "0.1.63",
+    "@swc/core": "1.3.100",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
+    "changelogen": "0.5.5",
     "npm-run-all": "4.1.5",
-    "prettier": "3.1.1",
     "rimraf": "5.0.5",
-    "sucrase": "3.34.0",
+    "storybook": "7.6.4",
     "typescript": "5.3.3"
   },
   "files": [
