--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
   "name": "khan-ui",
   "version": "1.0.2",
-  "description": "React UI components",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "A modern, accessible React UI component library for building responsive and visually appealing interfaces with ease.",
+  "type": "module",
+  "keywords": [
+    "react",
+    "ui",
+    "components",
+    "utils"
+  ],
+  "author": "Ivan Khanevich <help@iamkhan.tech>",
+  "bugs": {
+    "url": "https://github.com/iamkhan21/khan-ui/issues"
+  },
+  "homepage": "https://github.com/iamkhan21/khan-ui#readme",
+  "repository": "iamkhan21/khan-ui",
+  "license": "MIT",
   "scripts": {
-    "pretest": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "posttest": "npm run format",
+    "build": "npm-run-all type-check clean build:transpile build:types build:copy-package-json",
+    "build:copy-package-json": "node scripts/build.cjs",
+    "build:transpile": "swc ./src -d ./dist --copy-files",
+    "build:types": "tsc --emitDeclarationOnly",
+    "clean": "rimraf ./dist",
+    "format": "biome format --write .",
     "lint": "biome lint .",
     "lint:fix": "biome check --apply-unsafe ./src",
-    "release": "npm run lint:fix && changelogen --release && npm run build && cd dist && npm publish && git push --follow-tags",
-    "format": "biome format --write .",
-    "clean": "rimraf ./dist",
+    "posttest": "npm run format",
+    "pretest": "tsc --noEmit",
+    "release": "run-s release:lint release:changelog build release:publish release:push",
+    "release:changelog": "changelogen --release",
+    "release:lint": "npm run lint:fix",
+    "release:publish": "cd dist && npm publish",
+    "release:push": "git push --follow-tags",
+    "storybook:build": "storybook build",
+    "storybook:dev": "storybook dev -p 6006",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "type-check": "tsc --noEmit",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:transpile": "swc ./src -d ./dist --copy-files",
-    "build:copy-package-json": "node scripts/build.cjs",
-    "build": "npm-run-all type-check clean build:*",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "update": "nlx taze -wIL"
   },
-  "keywords": [],
-  "author": "Ivan Khanevich <help@iamkhan.tech>",
-  "license": "MIT",
-  "type": "module",
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -48,8 +61,5 @@
     "rimraf": "5.0.5",
     "storybook": "7.6.4",
     "typescript": "5.3.3"
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
