--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "update": "nlx taze -wIL"
   },
   "dependencies": {
+    "@nanostores/persistent": "0.9.1",
+    "@nanostores/react": "0.7.1",
+    "nanostores": "0.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
