--- a/package.json
+++ b/package.json
@@ -41,11 +41,9 @@
   "dependencies": {
     "@nanostores/persistent": "0.9.1",
     "@nanostores/react": "0.7.1",
-    "jotai": "2.6.0",
     "nanostores": "0.9.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zustand": "4.4.7"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
